bugfix: fixed pricing section on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12219,3 +12219,16 @@ form.checkout-coupon input[type="text"] {
   border-radius: 5px;
   margin-top: -6px;
 } /*# sourceMappingURL=style.css.map */
+
+@media (max-width: 768px) {
+  .pricing__box-header {
+    display: flex;
+    flex-direction: column;
+    align-items: start !important;
+  }
+
+  .pricing-box .badge-popular {
+    margin-left: unset;
+    margin-top: 8px;
+  }
+}
